# midll

./: .clang-format  .gitignore  CMakeLists.txt
.github/workflows/: lint.yml
include/midll/: alias.hpp  config.hpp  import.hpp  library_info.hpp  midll.hpp  runtime_symbol_info.hpp  shared_library.hpp  shared_library_load_mode.hpp
include/midll/detail/: aggressive_ptr_cast.hpp  elf_info.hpp  macho_info.hpp  pe_info.hpp  system_error.hpp
include/midll/detail/posix/: path_from_handle.hpp  program_location_impl.hpp  shared_library_impl.hpp
include/midll/detail/windows/: path_from_handle.hpp  shared_library_impl.hpp
test/: CMakeLists.txt
test/case/: main.cpp  test_empty_library_info.cpp  test_library_info.cpp  test_shared_library_errors.cpp  test_shared_library_get_symbol.cpp  test_shared_library_load.cpp  test_shared_library_search_symbol.cpp  test_structures.cpp  test_symbol_runtime_info.cpp
test/lib/: empty_library.cpp  test_library.cpp
